RESOLVED FIXED313281
sports.yahoo.com: volume slider baseline is incorrect and it is bit below compared to macOS
https://bugs.webkit.org/show_bug.cgi?id=313281
Summary sports.yahoo.com: volume slider baseline is incorrect and it is bit below com...
joanne_pan2
Reported 2026-04-24 17:41:20 PDT
Steps To Reproduce: 1. Go to sports.yahoo.com and find any video (e.g. https://sports.yahoo.com/video/netherlands-claims-womens-1000m-usas-santos-griswold-out-early-133527879.html) 2. Interact with volume slider and notice that the baseline is bit down and the slider is not centered. Volume Slider is not centered relative to the speaker icon.
Attachments
joanne_pan2
Comment 1 2026-04-24 17:41:39 PDT
joanne_pan2
Comment 2 2026-04-24 17:50:00 PDT
EWS
Comment 3 2026-04-27 11:44:01 PDT
Committed 312119@main (ec0f6661284b): <https://commits.webkit.org/312119@main> Reviewed commits have been landed. Closing PR #63563 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.