sports.yahoo.com: volume slider baseline is incorrect and it is bit below compared to macOS https://bugs.webkit.org/show_bug.cgi?id=313281 rdar://170502516

Reviewed by Aditya Keerthi and Abrar Rahman Protyasha.

The problem: The volume slider bar on sports.yahoo.com is too low
because the Video.js volume control container is being collapsed
to 1px in height. This only happens on iOS and not MacOS, since they are
being served different code via UA-sniff. The issue also reproduces on Chrome 144
on Android 16, as well as the entire Yahoo.com domain.

The fix: Setting a min-height: 100% and align-items: center on
the .vjs-volume-control element across the domain.

* Source/WebCore/page/Quirks.cpp:
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustForSiteSpecificQuirks const):

Canonical link: https://commits.webkit.org/312119@main